# bricks

./: .agent-loop.yml  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: BRICK_CATALOG.md
src/bricks/: __init__.py  api.py
src/bricks/boot/: bootstrapper.py
src/bricks/cli/: main.py
src/bricks/core/: dsl.py  filtering_selector.py
src/bricks/stdlib/: data_transformation.py
tests/: conftest.py  test_smoke.py
tests/boot/: test_bootstrapper.py
tests/cli/: test_main.py
tests/core/: test_flow.py  test_no_ai_imports.py
tests/stdlib/: test_contracts.py  test_data_transformation.py
